--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash.clonedeepwith": "^4.5.0",
     "next": "^13.1.1",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
     "react-use": "^17.4.0",
