--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/dm-sans": "^4.5.9",
+    "@next/font": "^13.1.1",
     "@soceanfi/solana-stake-sdk": "^0.1.1",
     "@soceanfi/stake-pool-sdk": "0.4.6",
     "@solana/buffer-layout": "^4.0.1",
