Add how to draw tooltip on top right of the canvas

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@chakra-ui/anatomy": "^2.1.1",
+    "@chakra-ui/icons": "^2.0.16",
     "@chakra-ui/react": "^2.4.6",
     "@chakra-ui/theme-tools": "^2.0.16",
     "@emotion/react": "^11.10.5",
